# golden_gate

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  PROGRESS_LOG.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: API.md  EXAMPLES.md  MATH.md  PAPER.md  RELEASING.md  index.md  reference.md
src/golden_gate/: __init__.py
src/golden_gate/core/: __init__.py  charvar.py  cyclo.py  gates.py  precision.py
src/golden_gate/core/harness/: __init__.py  campaign.py  demo_e6.py  prereg.py
src/golden_gate/core/jets/: __init__.py  boundary.py  massey.py  massey_legB.py
src/golden_gate/core/lie/: __init__.py  cohomology.py  e6.py  rep.py
src/golden_gate/demo/: __init__.py  braiding.py  compiler.py  constants.py  exact.py  gates.py  jones.py  knots.py  visualize.py
tests/: test_braiding.py  test_charvar.py  test_compiler.py  test_cyclo.py  test_cyclo_numeric.py  test_demo_gates.py  test_exact.py  test_gates.py  test_harness.py  test_jets_boundary.py  test_jets_massey.py  test_jones.py  test_knots.py  test_lie_cohomology.py  test_lie_e6.py  test_lie_rep.py  test_visualize.py
web/: explorer.html
