[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "golden_gate"
version = "0.1.0"
description = "Exact-arithmetic engines for metallic / Fibonacci-anyon quantum topology, and a braid-gate compiler."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dritëro M." }]
dependencies = ["numpy>=1.24", "sympy>=1.12", "mpmath>=1.3"]

[project.optional-dependencies]
# mpmath is now a runtime dependency -- the mpmath-based research engines (core.lie /
# core.jets / core.harness) landed in M3.
test = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Lets a plain `pytest` import the installed-style `src` package without an
# install step or PYTHONPATH.
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.mypy]
files = ["src/golden_gate"]
python_version = "3.11"
# numpy ships types; sympy and mpmath do not — don't fail on their missing stubs.
ignore_missing_imports = true
# The tree is type-consistent today; we do not (yet) require every def to be
# annotated. The public API carries hints + a py.typed marker; internal numeric
# helpers are hinted incrementally. Tighten here as annotation coverage grows.
warn_unused_ignores = true
warn_redundant_casts = true
