[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "golden_gate"
version = "0.1.0"
description = "Exact-arithmetic engines for metallic / Fibonacci-anyon quantum topology, and a braid-gate compiler."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dritëro M." }]
dependencies = ["numpy>=1.24", "sympy>=1.12", "mpmath>=1.3"]

[project.optional-dependencies]
# mpmath is now a runtime dependency -- the mpmath-based research engines (core.lie /
# core.jets / core.harness) landed in M3.
test = ["pytest>=7.4", "pytest-cov>=4.1"]
dev = ["golden_gate[test]", "ruff>=0.6", "mypy>=1.10"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Lets a plain `pytest` import the installed-style `src` package without an
# install step or PYTHONPATH.
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["golden_gate"]
branch = true

[tool.coverage.report]
# the `__main__` opt-in reproducers and the heavy OA_SLOW sweep drivers are not exercised by
# the fast tier by design (they are the ~10-min `python -m ...` reproducers); exclude the
# boilerplate so the floor reflects the code the fast suite actually covers.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "C4"]
# E741 (ambiguous name `I`/`l`): `I` is the imaginary unit / identity matrix throughout this
# mathematical code -- a deliberate, standard notation, not a mistake.
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
# core.lie / core.jets are FAITHFUL PORTS of the origin-axiom research probes (labelled
# `ported`, banked by identity checks). We keep them line-for-line with the source so they
# stay re-verifiable against it, and therefore exempt purely-cosmetic rewrites (dict()->{},
# %-format, zip(strict=), mpf-in-defaults, long math lines). Real errors (E/F/…) still apply.
"src/golden_gate/core/lie/*" = ["C408", "B008", "B905", "B007", "UP031", "E501"]
"src/golden_gate/core/jets/*" = ["C408", "B008", "B905", "B007", "UP031", "E501"]

[tool.mypy]
files = ["src/golden_gate"]
python_version = "3.11"
# numpy ships types; sympy and mpmath do not — don't fail on their missing stubs.
ignore_missing_imports = true
# The tree is type-consistent today; we do not (yet) require every def to be
# annotated. The public API carries hints + a py.typed marker; internal numeric
# helpers are hinted incrementally. Tighten here as annotation coverage grows.
warn_unused_ignores = true
warn_redundant_casts = true
